[package]
name = "gs"
version = "0.1.0"
authors = ["LightStrawberry <l21828604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.6"
web-view = "0.5.3"
hyper="0.12"
rust-embed = "5.1.0"
futures = "0.1"
