[package]
name = "gs"
version = "0.1.0"
authors = ["LightStrawberry <l21828604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/huytd/web-view" }
hyper="0.12"
rust-embed = "6.3.0"
futures = "0.1"
